--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://10.10.57.98/vipro
-spring.datasource.username=vipro
-spring.datasource.password=vprds_sefazce
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=validate
+##spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://10.10.57.98/vipro
+#spring.datasource.username=vipro
+#spring.datasource.password=vprds_sefazce
