--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -8,3 +8,12 @@
 #spring.datasource.url=jdbc:postgresql://10.10.57.98/vipro
 #spring.datasource.username=vipro
 #spring.datasource.password=vprds_sefazce
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
