--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -11,9 +11,22 @@
 
 # H2
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 # Datasource
 spring.datasource.url=jdbc:h2:file:~/test
+
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.generate_statistics=true
+#nao colocar em producao isso
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+spring.jpa.show-sql=true
+
+
+
+
+
