--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -18,7 +18,8 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+hibernate.hbm2ddl.auto=create-drop
 
 spring.jpa.properties.hibernate.generate_statistics=true
 #nao colocar em producao isso
