--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -21,11 +21,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 hibernate.hbm2ddl.auto=create-drop
 
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.generate_statistics=false
 #nao colocar em producao isso
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.type=trace
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 
