--- a/vipro-mobile/src/main/resources/application.properties
+++ b/vipro-mobile/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.type=trace
 spring.jpa.show-sql=false
 
+server.contextPath=/api
+
 
 
 
